fix(api): require ADMIN role on admin endpoints (closes #2)
AdminController endpoints accepted any authenticated JWT — a regular
user could read every user, freeze wallets, unlock PINs, read the
audit trail, and run reconciliation.

- New Role enum (USER, ADMIN); User.role column (EnumType.STRING,
  default USER via columnDefinition + @PrePersist guard so a
  ddl-auto=update against populated tables doesn't fail).
- UserDetailsServiceImpl grants ROLE_<role> as a GrantedAuthority,
  sourced from the DB per request (a role change takes effect on the
  next call, no token wait).
- SecurityConfig: @EnableMethodSecurity; AdminController class-level
  @PreAuthorize("hasRole('ADMIN')").
- GlobalExceptionHandler maps AccessDeniedException -> clean 403
  instead of a leaked 500.
- AuthorizationIntegrationTest: the 3 issue #2 characterizations flip
  from 'regular user allowed (200)' to 'USER forbidden (403),
  ADMIN allowed (200)'; add registerAdminAndLogin (promotes via
  jdbcTemplate).
- WalletIntegrationTest + ReconciliationIntegrationTest: 5 tests that
  called admin endpoints with a regular token now use an admin token
  (they relied on the missing role check, not characterizations of #2).
- Full suite green: 88 run, 0 failures.